@@ -35,9 +35,9 @@ parse_args (int argc, ACE_TCHAR *argv[])
       case '?':
       default:
         ACE_ERROR_RETURN ((LM_ERROR,
-                           "usage:  %s "
-                           "-o <iorfile>"
-                           "\n",
+                           ACE_TEXT("usage:  %s ")
+                           ACE_TEXT("-o <iorfile>")
+                           ACE_TEXT("\n"),
                            argv [0]),
                           -1);
       }
